# python-janken

./: .gitignore  README.md  janken.py  pyproject.toml  test_janken.py
