[tool.poetry]
name = "python-janken"
version = "0.1.0"
description = ""
authors = ["Go <go_kikuchi@nuco.co.jp>"]
readme = "README.md"
packages = [{include = "python_janken"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
